fixed styling for header and made nav work on mobile correctly

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -959,7 +959,7 @@ ul.social {
   h1 {
     color: #fff;
     font-weight: 900;
-    font-size: 2.5em;
+    font-size: 1em;
     letter-spacing: -0.035em;
     line-height: 1;
   }
@@ -1532,7 +1532,6 @@ ul.social {
       line-height: 44px;
       border-top: solid 1px rgba(255, 255, 255, 0.05);
       padding: 0 1em 0 1em;
-      font-style: italic;
 
       &:first-child {
         border-top: 0;
